assign a single role to the user
